chore: update .dockerignore to exclude additional files
Add common development and temporary files to dockerignore to reduce image size and avoid unnecessary context sends

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,14 @@
 .github/workflows/build-image.yml
 .git
 .gitignore
-.dockerignore
+node_modules
+__pycache__
+downloads
+*.ts
+*.mp4
+*.log
+*.csv
+*.zip
+.DS_Store
 README.md
 LICENSE
